--- a/styles.css
+++ b/styles.css
@@ -182,10 +182,38 @@ svg * {
   --font-family-base: 'Inter', sans-serif;
   --font-family-accent: 'League Gothic', sans-serif;
 
-  --container-width: 1280px;
-  --container-padding-width: 15px;
+  --container-width: 1440px;
+  --container-padding-x: 80px;
 
   --transition-duration: 0.2s;
 
   --border-radius: 8px;
+}
+
+body {
+  font-family: var(--font-family-base);
+  font-weight: 400;
+  color: var(--color-dark);
+  background-color: var(--color-white);
+  font-size: 18px;
+  line-height: 1.6;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+h1, .h1,
+h2, .h2,
+h3, .h3 {
+  font-weight: 700;
+}
+
+h1, .h1 {
+  font-family: var(--font-family-accent);
+  font-weight: 400;
+}
+
+.container {
+  max-width: var(--container-width);
+  margin-inline: auto;
+  padding-inline: var(--container-padding-x);
 }
