--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,6 @@ button {
 
 html {
   height: 100%;
-  scrollbar-gutter: stable;
   scroll-behavior: smooth;
 }
 
@@ -121,6 +120,8 @@ body {
 
 a:where([class]) {
   display: inline-flex;
+  text-decoration: none;
+  color: inherit;
 }
 
 button,
@@ -151,7 +152,6 @@ button {
 svg * {
   transition-property: fill, stroke;
 }
-
 
 :where(table) {
   border-collapse: collapse;
@@ -198,7 +198,6 @@ body {
   font-size: 18px;
   line-height: 1.6;
   box-sizing: border-box;
-  width: 100%;
 }
 
 h1, .h1,
@@ -216,4 +215,191 @@ h1, .h1 {
   max-width: var(--container-width);
   margin-inline: auto;
   padding-inline: var(--container-padding-x);
+}
+
+.visible-mobile{
+  display: none !important;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-block: 14px;
+  padding-inline: 24px;
+  position: relative;
+  box-sizing: border-box;
+}
+
+.header__logo {
+  font-size: 24px;
+  color: var(--color-accent);
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  white-space: nowrap;
+  width: 213px;
+  margin-inline: 8px;
+  pointer-events: none;
+}
+
+.header__overlay{
+  display: contents;
+}
+
+.header__menu-list {
+  display: flex;
+  width: 534px;
+  column-gap: 32px;
+  justify-content: center;
+  align-items: center;
+}
+
+.header__menu-item {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 17px;
+  display: inline-block;
+  white-space: nowrap;
+  pointer-events: none;
+}
+
+.header__menu-link:hover {
+  color: var(--color-accent);
+  transition-duration: var(--transition-duration);
+  cursor: pointer;
+}
+
+.header__login {
+  display: flex;
+  justify-content: flex-end;
+  width: 229px;
+  white-space: nowrap;
+}
+
+.button {
+  display: inline-flex;
+  align-items: center;
+  height: 40px;
+  padding-inline: 24px;
+  background-color: var(--color-accent);
+  color: var(--color-white);
+  border-radius: var(--border-radius);
+  font-size: 14px;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  white-space: nowrap;
+  pointer-events: none;
+}
+
+.burger-button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  background-color: var(--color-accent);
+  border-radius: var(--border-radius);
+  border: none;
+
+}
+.burger-button__line {
+  height: 3px;
+  width: 30px;
+  background-color: var(--color-white);
+  transform-origin: center;
+}
+
+
+@media (max-width: 1024px) {
+  .header{
+    padding-inline: 10px;
+  }
+  .header__logo {
+    font-size: 18px;
+  }
+  .header__menu-list {
+    column-gap: 15px;
+    width: 480px;
+  }
+}
+
+@media (max-width: 802px) {
+  .header__overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+
+    background-color: var(--color-white);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+
+    transform: translateX(100%);
+    opacity: 0;
+    visibility: hidden;
+
+    transition: transform .3s ease, opacity .3s ease;
+
+    z-index: 999;
+  }
+
+  .header__overlay.active {
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .visible-mobile {
+    display: flex !important;
+  }
+
+  .header__menu-list {
+    flex-direction: column;
+    row-gap: 24px;
+  }
+
+  .header__login {
+    width: auto;
+    justify-content: center;
+    background: none;
+  }
+
+  .header__overlay {
+    display: flex;
+  }
+
+  .header__burger-button {
+    position: relative;
+    z-index: 1001;
+  }
+
+  .header__burger-button.active .burger-button__line:nth-child(1) {
+    transform: rotate(45deg) translateX(8px) translateY(10px);
+  }
+  .header__burger-button.active .burger-button__line:nth-child(2) {
+    opacity: 0;
+  }
+  .header__burger-button.active .burger-button__line:nth-child(3) {
+    transform: rotate(-45deg) translateX(8px) translateY(-10px);
+  }
+  .burger-button__line {
+    transition: transform .3s ease, opacity .3s ease;
+  }
+
+  .header__menu-item {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 576px) {
+  .header{
+    padding-inline: 10px;
+  }
 }
