--- a/styles.css
+++ b/styles.css
@@ -303,8 +303,8 @@ h1, .h1 {
   background-color: var(--color-accent);
   border-radius: var(--border-radius);
   border: none;
-
 }
+
 .burger-button__line {
   height: 3px;
   width: 30px;
@@ -662,6 +662,7 @@ picture {
     width: 100%;
     height: 180px;
     margin-bottom: 0;
+    border-radius: var(--border-radius);
   }
 
   .story-item__rank {
@@ -714,5 +715,74 @@ picture {
 
   .story-item__info {
     font-size: 12px;
+  }
+}
+
+
+
+.related-news {
+  padding-block: 40px;
+}
+
+.related-news__list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
+}
+
+.related-card {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  height: 100%;
+}
+
+.related-card__image {
+  width: 100%;
+  height: auto;
+}
+
+.related-card__title {
+  font-size: 22px;
+  line-height: 1.4;
+  font-weight: 700;
+}
+
+.related-card__description {
+  font-size: 18px;
+  line-height: 1.6;
+}
+
+@media (max-width: 1024px) {
+  .related-news__list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+  }
+
+  .related-card__description {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 500px) {
+  .related-news__list {
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
+
+  .related-card__image {
+    aspect-ratio: 12 / 8;
+    object-fit: cover;
+    height: auto;
+    width: 100%;
+  }
+
+  .related-card__title {
+    font-size: 18px;
+    line-height: 1.2;
+  }
+
+  .related-card__description {
+    font-size: 14px;
   }
 }
