Fix accessibility, headings, meta tags, image optimization

--- a/styles.css
+++ b/styles.css
@@ -202,11 +202,12 @@ body {
 
 h1, .h1,
 h2, .h2,
-h3, .h3 {
+h3, .h3,
+h4, .h4 {
   font-weight: 700;
 }
 
-h1, .h1 {
+h2, .h2 {
   font-family: var(--font-family-accent);
   font-weight: 400;
 }
@@ -864,4 +865,16 @@ picture {
 
 body.menu-open {
   overflow: hidden;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  white-space: nowrap;
+  border: 0;
 }
